[package]
name = "near-transactions"
version = "0.2.0"
edition = "2024"
description = "High-level abstractions to facilitate the creation, manipulation, and signing of transactions on the NEAR blockchain."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-crypto = "0.31"
near-primitives = "0.31"
